Changelog
=========

3.16 (unreleased)
-----------------

- Split out zip upload functionality into a separate function (#222) (contributed by lausek).
- Do not allow JS injection into the Photo caption field (#223) (bug detected by Domiee13).
- Fixed deprecation warnings from Pillow. Should fix #225.
- Handle when PHOTOLOGUE_DIR is not a string. Should fix #224.
- Checked compatibility with Django 4.1 and 4.2. Dropped 2.2 and 4.0.


3.15.1 (2022-02-23)
-------------------

- Django 4.0 adds a no-op migration (#221) (reported by rhbvkleef).


3.15 (2022-02-05)
-----------------

- Made compatible with Django 4.0 (#220) (contributed by Martijn Verkleij).
- Updated French translation (#219) (contributed by Alexandre Iooss).

3.14 (2021-10-03)
-----------------

- Updated the sample templates to use Bootstrap 5 (previously used Bootstrap 3).
- Checked compatibility with Django 3.2.
- Use isort to tidy the Python imports.

3.13 (2020-09-03)
-----------------

- Checked compatibility with Django 3.1.
- Apply crop/effect changes to existing images (#210).
- Encoding objects before hashing error	(#205).

3.12 (2020-07-30)
-----------------

- Drop alpha channel only on jpeg save (contributed by drazen)
- Added zh_Hans translation	(contributed by Lessica)
- improved Dutch translations (contributed by andreas.milants)

3.11 (2019-12-13)
-----------------

- Added support for Django 3.
- Dropped support for Python 2, python 3.4 and Django 2.1.


3.10 (2019-08-29)
-----------------

- Compatibility with Django 2.2.


3.9 (2019-04-21)
----------------

- Fixes when file doesn't exist in the file system but still is in S3.
- Doc tweaks - and added a page on how to actually use Photologue!
- Make setup compatible with latest version of pip.
- Checked compatibility with Django 2.1 and Python 3.7.
- Updated translations for Catalan and Basque.
- Missed a Django migration (issue #194).
- Test Tox; integrate with Travis and Coveralls.