@@ -8,8 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false # If one test fails, complete the other jobs.
       matrix:
-        python: [ 3.7, 3.8, 3.9, '3.10', '3.11' ]
+        python: [ 3.8, 3.9, '3.10' ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -18,6 +19,7 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install tox tox-gh-actions
         working-directory: ./example_project
@@ -34,7 +36,7 @@ jobs:
       - name: Coverage
         if: ${{ matrix.python == '3.8' }}
         run: |
-          pip install coverage[toml]
+          pip install coverage[toml] django
           coverage run ./example_project/manage.py test photologue
       - name: Upload coverage
         if: ${{ matrix.python == '3.8' }}
